# instaclone-backend.rs

./: .env  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  Rocket.toml
migrations/2018-02-24-204148_create_user/: up.sql
migrations/2018-02-24-230430_create_users/: up.sql
migrations/2018-02-25-160446_create_sessions/: up.sql
src/: auth.rs  connection.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs
src/models/: mod.rs  users.rs
src/routes/: mod.rs  session.rs  users.rs
src/users/: mod.rs  user_controller.rs  user_service.rs
