[package]
name = "instaclone-backend"
version = "0.1.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]

[dependencies]
hyper = "0.11.16"
futures = "0.1.18"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
dotenv = "0.10.1"

[dependencies.diesel]
version = "1.1.1"
features = ["sqlite"]
