[package]
name = "instaclone_backend"
version = "0.1.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]
description = "Pet project: backend for instaclone"
license = "Unlicense"

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde_derive = "1.0.27"
serde = "1.0.27"
serde_json = "1.0.9"
rocket_contrib = "0.3.6"
dotenv = "0.11.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"

[dependencies.diesel]
version = "1.1.1"
features = ["postgres"]
